fix: Make footer toggle work on Firefox
Had some quotation mark issues that prevented the javascript from working on Firefox.

--- a/Intro to Programming Nanodegree/Project 4/mockup.css
+++ b/Intro to Programming Nanodegree/Project 4/mockup.css
@@ -9,7 +9,7 @@ body {
   margin: 0;
 }
 
-.header {
+#header {
   position: fixed;
   width: 100%;
   height: 40px;
@@ -25,7 +25,7 @@ body {
   padding-bottom: 10px;
 }
 
-.movies {
+#movies {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -44,6 +44,6 @@ body {
   display: none;
 }
 
-.trailer {
+#trailer {
   margin: 1%;
 }
